# DocuForge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/agents/: graph.py  nodes.py  prompts.py
backend/app/core/: config.py  logging.py
backend/app/models/: document.py  workflow.py
backend/app/services/: ingestion.py  vector_db.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_logic.py  test_units.py
frontend/: Dockerfile  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
